add a self project

--- a/src/index.html
+++ b/src/index.html
@@ -182,7 +182,7 @@
                             <div class="item-desciption">
                                 <div class="text">
                                     <p>基于 webpack + D3.js 开发的小型图表库，是我在组内进行关于“ D3.js 绘图运用”技术分享的产出成果，主要展示了目前常用的几种图表，通过这次分享演示，旨在帮助新同事快速上手
-                                        D3.js</p>
+                                        D3.js </p>
                                     <p>项目代码：
                                         <a href="https://github.com/funlee/d3charts" target="_black">d3charts:[https://github.com/funlee/d3charts]</a>
                                     </p>
@@ -198,7 +198,19 @@
                                 </span>
                             </div>
                             <div class="item-desciption">
-                                <p>这是一个用于学习Vuejs的练手项目，利用第三方API，获取慕课网课程列表，前台用Vue实现展示，支持分页加载、支持直接在浏览器地址栏修改传参加载数据、页面布局支持响应式，运用了Vue+vue-router+axios+iView。</p>
+                                <p>这是一个用于学习 Vuejs 的练手项目，利用第三方 API ，获取慕课网课程列表，前台用 Vuejs 实现展示，支持分页加载、支持直接在浏览器地址栏修改传参加载数据、页面布局支持响应式，运用了 Vue + vue-router + axios + iView 。</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="item-info">
+                                <span class="time">2017.12</span>
+                                <span class="name">vue-visualization</span>
+                                <span class="link">
+                                    <a href="https://github.com/funlee/vue-visualization" target="_black" title="vue-visualization">link</a>
+                                </span>
+                            </div>
+                            <div class="item-desciption">
+                                <p>由于在公司所做的项目，都没有使用框架，自己在业余时间尝试用 Vuejs 做了两个数据可视化的页面，通过这个练习，掌握了 Vuejs 父子组件数据传递，掌握了 Vuejs 在多页面项目中的使用。</p>
                             </div>
                         </li>
                     </ul>
