--- a/src/index.html
+++ b/src/index.html
@@ -66,10 +66,10 @@
                         <span>自我总结</span>
                     </div>
                     <ul class="li-dot">
-                        <li>有十余个前端项目的开发经验，熟悉 web 项目开发流程</li>
-                        <li>对 D3.js 、 Echarts、 SVG 具有丰富的使用经验，能熟练开发常用图表、地图等可视化图表组件</li>
-                        <li>热爱分享，具备一定演讲能力，曾多次在组内进行前端技术分享，涉及 HTML5 、 CSS3 、 D3.js 、SVG</li>
-                        <li>喜欢折腾各种前端工具，乐于将前端工程化开发的模式，去实现自己的一些奇怪 idea</li>
+                        <li>有十余个前端项目的开发经验，多次担任项目前端开发负责人，能独立完成 web 项目的前端开发工作</li>
+                        <li>擅长数据可视化开发，对 D3.js 、 Echarts、 SVG 具有丰富的使用经验，能熟练开发常用图表、地图等可视化图表组件</li>
+                        <li>热爱分享，具备一定演讲能力，曾多次在前端组内进行技术分享，涉及 HTML5 、 CSS3 、 D3.js 、SVG</li>
+                        <li>喜欢敲代码的感觉，热衷于用代码去实现一些自己奇怪的 idea，闲暇时间喜欢在 github 打怪升级</li>
                     </ul>
                 </div>
             </div>
@@ -94,16 +94,13 @@
                                             业务功能是对昆明市海量的警务数据进行集中可视化展示，帮助警务人员全面快速的掌握警务信息
                                         </p>
                                         <p>
-                                            总体分为五个专题部分，共计十六个页面，在该项目中担任项目前端开发负责人，参与需求评审、工时评估和技术可行性评估工作，统筹前后端接口文档编写、页面设计稿还原、前后端联调的整体工作
+                                            担任该项目前端开发负责人，参与工时评估和技术可行性评估，负责接口文档编写、前端业务实现、前后端联调等工作
                                         </p>
                                         <p>
-                                            各类图表的实现均采用 D3.js ，js 模块化采用的是 SeaJS ，由于项目是在公安内网环境下进行开发的，所以没有采用当下流行的工程化开发模式
+                                            图表及地图的实现均采用 D3.js ，js 模块化采用的是 SeaJS ，由于是在公安内网环境下进行开发，所以没有采用工程化的开发模式
                                         </p>
                                         <p>
-                                            项目难点在于地图数据和图表数据的联动展示，以及各种异形图表的实现，项目中充分运用几何数学、 SVG 蒙版及动画等相关知识
-                                        </p>
-                                        <p>
-                                            该项目参与昆明市地区大数据平台擂台赛获得第一名
+                                            该项目共计五个专题，十六个页面，参与昆明市地区大数据平台擂台赛获得第一名
                                         </p>
                                     </div>
                                 </li>
@@ -111,9 +108,8 @@
                                     <p class="project-name">2.武汉大数据实战应用中心</p>
                                     <div class="text">
                                         <p>业务功能是通过酷炫的页面，集中展示武汉市出入境人员的流动情况，以及武汉市公安人员和车辆的布控情况</p>
-                                        <p>项目共有三个专题模块，前期只负责一个模块页面的 API 接口文档编写、前端页面还原和前后端接口联调等工作</p>
+                                        <p>负责接口文档编写、前端业务实现、前后端联调等工作</p>
                                         <p>项目开发中期面临项目组前端同事离职，之后自己独立完成了项目剩余的前端开发工作，保证了项目的按时交付</p>
-                                        <p>因为在该项目中的表现，公司给予了加薪奖励</p>
                                     </div>
                                 </li>
                             </ul>
@@ -129,17 +125,17 @@
                                     <p class="project-name">1.商机通宣传页</p>
                                     <div class="text">
                                         <p>
-                                            业务功能是展示公司商机通产品的核心信息，吸引更多企业开通该服务
+                                            业务功能是展示公司商机通产品的核心信息，吸引更多企业开通该增值服务
                                         </p>
                                         <p>
                                             负责整个宣传页 PC 端和移动端的前端开发工作，包括切图、代码编写和 bug 修复
                                         </p>
                                         <p>
-                                            主要运用了大量 CSS3 动画的知识，通过全屏展示的模式，让页面更加大气
+                                            运用了大量 CSS3 动画的知识，PC端采用 fullPage.js 全屏展示的模式，移动端采用 rem 作为单位适配各种大小的屏幕
                                         </p>
                                         <p>
                                             在线访问：
-                                            <a href="http://www.3158.com/zst/" target="_black">商机通：[http://www.3158.com/zst]</a>
+                                            <a href="http://www.3158.com/zst/" target="_black"> http://www.3158.com/zst </a>
                                         </p>
                                     </div>
                                 </li>
@@ -147,17 +143,17 @@
                                     <p class="project-name">2.3158企业在线</p>
                                     <div class="text">
                                         <p>
-                                            该项目通过对各类商家的信息的进行展示，致力于帮助各类商家打通上下供应链
+                                            业务功能是通过对各类商家的信息进行展示，致力于帮助各类商家打通上下供应链
                                         </p>
                                         <p>
-                                            主要负责页面设计稿的还原工作，并配合后端 PHP 开发人员进行相关功能的优化迭代
+                                            主要负责整个站点 PC 端和移动端页面设计稿的还原工作，并配合后端 PHP 开发人员进行相关功能的优化迭代
                                         </p>
                                         <p>
-                                            作为我从事前端工作的第一个项目，虽然做的工作很基础，但它让我对 CSS 页面布局、前端切图有了深刻认识
+                                            作为我从事前端开发的第一个项目，虽然做的工作很基础，但它让我对 CSS 页面布局、前端切图和移动端开发有了深刻认识
                                         </p>
                                         <p>
                                             在线访问：
-                                            <a href="http://www.3158.com" target="_black">企业在线：[http://www.3158.com]</a>
+                                            <a href="http://www.3158.com" target="_black"> http://www.3158.com </a>
                                         </p>
                                     </div>
                                 </li>
@@ -172,45 +168,33 @@
                     </div>
                     <ul class="item-list">
                         <li>
-                            <div class="item-info">
-                                <span class="time">2017.9</span>
-                                <span class="name">d3Charts</span>
-                                <span class="link">
-                                    <a href="http://show.funlee.cn/d3charts/index.html" target="_black" title="d3Charts">link</a>
-                                </span>
-                            </div>
+                            <p class="project-name">1.vue-visualization</p>
                             <div class="item-desciption">
-                                <div class="text">
-                                    <p>基于 webpack + D3.js 开发的小型图表库，是我在组内进行关于“ D3.js 绘图运用”技术分享的产出成果，主要展示了目前常用的几种图表，通过这次分享演示，旨在帮助新同事快速上手
-                                        D3.js </p>
-                                    <p>项目代码：
-                                        <a href="https://github.com/funlee/d3charts" target="_black">d3charts:[https://github.com/funlee/d3charts]</a>
-                                    </p>
-                                </div>
+                                <p>由于公司所做的项目，都没有使用框架，自己在业余时间尝试用 Vuejs 做了这个数据可视化项目</p>
+                                <p>技术栈：Vue + vue-router + D3.js 4.0 + Mockjs</p>
+                                <p>代码地址：
+                                    <a href="https://github.com/funlee/vue-visualization" target="_black"> https://github.com/funlee/vue-visualization </a>
+                                </p>
                             </div>
                         </li>
                         <li>
-                            <div class="item-info">
-                                <span class="time">2017.9</span>
-                                <span class="name">imooc-list</span>
-                                <span class="link">
-                                    <a href="https://github.com/funlee/imooc-list" target="_black" title="imooc-list">link</a>
-                                </span>
-                            </div>
+                            <p class="project-name">2.d3charts</p>
                             <div class="item-desciption">
-                                <p>这是一个用于学习 Vuejs 的练手项目，利用第三方 API ，获取慕课网课程列表，前台用 Vuejs 实现展示，支持分页加载、支持直接在浏览器地址栏修改传参加载数据、页面布局支持响应式，运用了 Vue + vue-router + axios + iView 。</p>
+                                <p>为了在组内进行技术分享，而做的一个展示页面，旨在通过这次分享，帮助新同事快速上手 D3.js</p>
+                                <p>技术栈：webpack + D3.js 3.0 + Mockjs</p>
+                                <p>代码地址：
+                                    <a href="https://github.com/funlee/d3charts" target="_black"> https://github.com/funlee/d3charts </a>
+                                </p>
                             </div>
                         </li>
                         <li>
-                            <div class="item-info">
-                                <span class="time">2017.12</span>
-                                <span class="name">vue-visualization</span>
-                                <span class="link">
-                                    <a href="https://github.com/funlee/vue-visualization" target="_black" title="vue-visualization">link</a>
-                                </span>
-                            </div>
+                            <p class="project-name">3.resume-auto</p>
                             <div class="item-desciption">
-                                <p>由于在公司所做的项目，都没有使用框架，自己在业余时间尝试用 Vuejs 做了两个数据可视化的页面，通过这个练习，掌握了 Vuejs 父子组件数据传递，掌握了 Vuejs 在多页面项目中的使用。</p>
+                                <p>为了制作自己的 web 版简历，就搞了这个数据模版分离的简历生成器，简单易用</p>
+                                <p>技术栈：gulp + browserify + handlebars + less</p>
+                                <p>代码地址：
+                                    <a href="https://github.com/funlee/resume-auto" target="_black"> https://github.com/funlee/resume-auto </a>
+                                </p>
                             </div>
                         </li>
                     </ul>
@@ -226,7 +210,6 @@
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
